--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./images/favicon.ico">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
@@ -26,9 +27,10 @@
         <a href="./contact.html">Contact</a>
         <a href="./rules.html">Rules</a>
         <a href="./game-information.html">Game Information</a>
+        <a href="./form.html">Registration Form</a>
     </nav>
     <main>
-        <section>
+        <section class="main-section">
 
             <h3>August 4</h3>
             <p>MDSL Fundraiser</p>
@@ -40,6 +42,7 @@
         </section>
     </main>
     <footer>
+        <p>Author: Juan esteban Franco</p>
         <img src="./images/hockey-3.jpg" alt="image of hockey">
     </footer>
 </body>
